# WalletViewer

./: .gitignore  CMakeLists.txt  Makefile  README.md  algorithms.cpp  algorithms.h  common_types.h  content_reader.cpp  content_reader.h  main.cpp  ods_reader.cpp  ods_reader.h
CMakeTools/: add_library.cmake
doc/: HL_Overview.txt
include/: algorithms.h  common_types.h  content_reader.h  ods_reader.h
src/: algorithms.cpp  content_reader.cpp  main.cpp  ods_reader.cpp
test/: content.xml
